# ANTIGRAVITY

./: .gitignore  CMakeLists.txt  README.md  package.ps1  render.yaml
docs/: VirtualAudioDriver.cpp  code-signing.md  facts.md  streamer-outreach.md
installer/: Install.bat  Install.ps1  README.txt  Uninstall.bat  Uninstall.ps1  app.rc  make-icon.ps1  setup.iss
server/: README.md  package-lock.json  package.json  server.js
server/public/: soundboard.html  voice-changer.html
src/: main.cpp
src/ads/: AdBanner.cpp  AdBanner.h
src/audio/: AudioEngine.cpp  AudioEngine.h  Mixer.cpp  Mixer.h  RingBuffer.h
src/config/: AppConfig.cpp  AppConfig.h
src/dsp/: DSPGraph.cpp  DSPGraph.h  DSPNode.h  DspPresets.cpp  DspPresets.h  Effects.cpp  Effects.h  OutputLimiter.cpp  OutputLimiter.h
src/license/: Entitlement.cpp  Entitlement.h  LicenseManager.cpp  LicenseManager.h
src/soundboard/: Soundboard.cpp  Soundboard.h
src/ui/: Theme.cpp  Theme.h  UIController.cpp  UIController.h  Widgets.cpp  Widgets.h
src/util/: CrashReporter.cpp  CrashReporter.h
